--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         // --- CONSTANTS AND SETUP ---
         // IMPORTANT: Replace this with the live HTTPS URL of your PythonAnywhere backend server.
         // E.g., 'https://yourusername.pythonanywhere.com'
-        const BACKEND_URL = 'wiener-doge-arcade.vercel.app'; 
+        const BACKEND_URL = 'https://wiener-doge-arcade.vercel.app'; 
         
         const slotSymbols = ['🐶', '🦴', '🌭', '7️⃣'];
         const REEL_CONFIG = [
